--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "treecm"]
+	path = treecm
+	url = https://github.com/mbask/treecm
+	shallow = true
+	registered = true
